CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.6.2-dev

documentation
======================

configxml.html
----------------------
* Added "veto" sourcecontrol to modificationset overview documentation (main/docs/configxml.html#modificationset). Patch by Allan Wick.


build loop
======================

CompositeBuilder
----------------------
* Fix validation error due to multiple calls to builder.validate() (CC-620). Reported by Tim Morrow

HttpFile
----------------------
* Fix bug where HttpFile didn't work with domain only (http://host.com) urls (CC-614). Patch by J. David Beutel

MKS
----------------------
* Fix bug where modifications were returned from all previous builds, not just the current build (CC-628). Patch by Min Li

PhingBuilder
----------------------
* Add new plug-in for PHP build tool Phing (CC-613). Submitted by Hans Lellelid.

PluginRegistry
----------------------
* Remove deprecated method PluginRegistry.getDefaultProperties(String pluginName).

ProjectConfig
----------------------
* Fixed a bug where ProjectConfig.stop() was calling Project.start() instead of Project.stop(). The effect of this would be for projects that have been removed from config.xml to continue to build.

reporting
======================

XmlServlet
----------------------
* Enhancement to enable Cruise to work with the cctray distributed as part of CruiseControl.net. Patch by Davie Moston.
    Install cctray from  http://sourceforge.net/project/showfiles.php?group_id=71179
    Then run cctray, select setting from the tray icon, then add, add server, "Use Custom URL"  with a URL of "http://YOUR_SERVER/cruisecontrol/xml", then select the project you want to monitor and hit OK.

contrib
======================

distributed
----------------------
* Fix thread leak in DistributedMasterBuilder under high load (CC-625). Reported and Tested by Michael Van Hoff
* Fix doc error regarding Unicast Lookup URL settings